--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,6 @@
 <% end %>
 <%= yield %>
 <%= debug(params) if Rails.env.development? %>
+<%= session.inspect if Rails.env.development? %>
 </body>
 </html>
