--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing users</h1>
-You are <%= current_user %>
+<% if signed_in? %>
+  You are <%= @current_user.username %>
+<% end %>
 <table>
   <tr>
     <th>Username</th>
