--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,5 +37,6 @@
 </p>
 <% end %>
 
+<%= link_to 'Creat Profile', new_moonlyter_path %> | 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
