--- a/app/views/moonlyters/show.html.erb
+++ b/app/views/moonlyters/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Moonlyter:</b>
   <%= @moonlyter.user.username %>
@@ -51,5 +49,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_user_path(@moonlyter.user) %> |
+<%= link_to 'Edit', edit_moonlyter_path(@moonlyter) %> |
 <%= link_to 'Back', moonlyters_path %>
