--- a/app/views/moonlyters/edit.html.erb
+++ b/app/views/moonlyters/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
+<%= link_to 'NEW SPECIALTY!!!!', new_moonlyter_specialty_path(@moonlyter) %> |
 <%= link_to 'Show', @moonlyter %> |
 <%= link_to 'Back', moonlyters_path %>
